<resources>
    <string name="app_name">Mentorship</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorites">Favorite</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="message_hint">Message</string>

    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>

    <string name="skills_unlisted">Skills: UNLISTED</string>
    <string name="job_unlisted">Job: UNLISTED</string>
    <string name="summary_unlisted">Summary: UNLISTED</string>
    <string name="education_unlisted">Education: UNLISTED</string>

    <string name="vector_bookmark_pathdata" translatable="false">M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z</string>

    <string name="parse_app_id">TeamMatt</string>
    <string name="parse_client_key">TeamMatt</string>
    <string name="parse_server_url">http://teammatt-fbu-mentorship.herokuapp.com/parse</string>


</resources>
