<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_black_18dp"
        android:title="Search" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
