<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="169dp"
        android:layout_height="223dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="Profile Picture"
        app:srcCompat="@android:color/black" />

    <ScrollView
        android:id="@+id/svInfo"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Name" />

            <TextView
                android:id="@+id/tvSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/tvName"
                android:text="@string/skills_unlisted" />

            <TextView
                android:id="@+id/tvJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/tvSkills"
                android:text="@string/job_unlisted" />

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/tvJob"
                android:text="@string/summary_unlisted" />

            <TextView
                android:id="@+id/tvEdu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/tvSummary"
                android:text="@string/education_unlisted" />

            <RatingBar
                android:id="@+id/rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEdu"
                android:numStars="5"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/tvRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rb"
                android:layout_toEndOf="@id/tvRating"
                android:layout_marginLeft="5dp"
                android:text="Your Rating"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rb"
                android:text="Overall Rating"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRating"
                android:text="Submit Rating" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/title_messages" />

    <ImageButton
        android:id="@+id/btFav"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/favorite_save" />



</RelativeLayout>